--- a/INDEX.html
+++ b/INDEX.html
@@ -35,14 +35,15 @@
             <span class="caret"></span>
             </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li id="tagesverlauf"><a href="#">Tagesverlauf</a></li>
-                    <li id="wochenverlauf"><a href="#">Wochenverlauf</a></li>
-                    <li id="monatsverlauf"><a href="#">Monatsverlauf</a></li>
+                    <li id="gesamt"><a href="#">Gesamt</a></li>
+                    <li id="tagesdurchschnitt"><a href="#">Tagesdurchschnitt</a></li>
+                    <li id="wochendurchschnitt"><a href="#">Wochendurchschnitt</a></li>
+                    <li id="monatsdurchschnitt"><a href="#">Monatsdurchschnitt</a></li>
                 </ul>
         </div>
 
         <div id="header-small">
-            <h4 id="data-title" >Tagesverlauf<small></small></h4>
+            <h4 id="data-title" >Gesamt<small></small></h4>
         </div>
 
         <div id="checkboxes">
