--- a/INDEX.html
+++ b/INDEX.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="res\css\bootstrap.min.css">
     <link rel="stylesheet" href="res\css\styles.css">
+    <link rel="stylesheet" href="res\css\slider.css" >
 </head>
 
 
@@ -15,7 +16,7 @@
 <body>
     
         <div id="header">
-            <h1 id="titel" >Grips <small>Log Daten</small></h1>
+            <h1 id="titel" >Grips <small>Log Daten 2015</small></h1>
         </div>
 
         <div id="website">
@@ -24,7 +25,8 @@
                 <ul class="nav nav-pills nav-stacked">
                 <li role="presentation" id="traffic-button"><a href="#">Traffic</a></li>
                 <li role="presentation"><a href="#">Kurse</a></li>
-                <li role="presentation"><a href="#">Aktionen/Medien</a></li>
+                <li role="presentation"><a href="#">Aktionen</a></li>
+                <li role="presentation"><a href="#">Medien</a></li>
                 <li role="presentation"><a href="#">Nutzer</a></li>
             </ul>
         </div>
@@ -48,22 +50,22 @@
 
         <div id="checkboxes">
             <label class="checkbox-inline" >
-                <input type="checkbox" id="inlineCheckbox1" value="option1" > Logins
+                <input type="checkbox" id="inlineCheckbox1" value="option1" > Aktivität
             </label>
             <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox2" value="option2"> Abgaben
+                <input type="checkbox" id="inlineCheckbox2" value="option2"> Logins
             </label>
             <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox3" value="option3"> Forum (Lesen)
+                <input type="checkbox" id="inlineCheckbox3" value="option3"> Abgaben
             </label>
-            <label class="checkbox-inline">
-                <input type="checkbox" id="inlineCheckbox4" value="option4"> Kommentare
-            </label>
-
 
         </div>
 
-        <div id="visualisation-canvas"></div>
+
+        <div id="visualisation-canvas">
+                <div id="filter_div"></div>
+                <div id="chart_div"></div>
+        </div>
         
 
 
@@ -77,7 +79,7 @@
                 'modules':[{
                 'name':'visualization',
                 'version':'1',
-                'packages':['corechart']
+                'packages':['corechart', 'controls']
             }]}"></script>
 
         <script src="js/src/Main.js"></script>
